public_html/assets/style.css
/* ... */
.recorder[data-status="recording"] > .controls > .icon-main > svg {
  display: block;
}
.recorder > .controls > button:last-child {
  visibility: hidden;
}
.recorder[data-status="playable"] > .controls > button:last-child {
  visibility: visible;
}
.recorder > .main {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}
.recorder > .main > .player {
  visibility: hidden;
  width: 0;
  transition: width 1s ease-in-out, visibility 1s;
  background-color: var(--color-background-alternative);
}
.recorder[data-status="playable"] > .main > .player {
  visibility: visible;
  width: 70%;
}
.recorder > .main > .player .play-stop > .icon {
  visibility: hidden;
}
.recorder[data-status="playable"] > .main > .player .play-stop > .icon {
  visibility: visible;
}
.recorder > .main > .icon-main > svg {
  transition: transform 1s ease-in-out, font-size 1s ease-in-out,
    bottom 0.5s ease-in-out, color 1s ease-out;
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translate(-50%, -25%);
  z-index: 1;
  border-radius: 50%;
  box-shadow: 0 5px 10px black;
}
.recorder[data-status="recording"] > .main > .icon-main > svg {
  bottom: 50%;
  font-size: calc(2.5rem * 5);
  fill: red;
  box-shadow: 0 0 6rem red;
  transform: translate(-50%, 25%);
  animation: 2s ease-in-out infinite alternate center-breathe;
}
@keyframes center-breathe {
  0% {
    transform: translate(-50%, 0) scale(1);
  }
  100% {
    transform: translate(-50%, 25%) scale(0.9);
  }
}
.record {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.record > input[type="file"] {
  position: absolute;
  width: 0;
  opacity: 0;
  z-index: -1;
}

.message-screen {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}
.message-screen > svg {
  height: 6rem;
  fill: var(--color-text);
}

/* Sections */
section {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 5rem;
}
section:first-of-type {
  margin-top: 0;
}

#live {
  background-color: var(--color-background-live);
  --color-transition-from: var(--color-background-live);
  --color-transition-to: var(--color-background);
  width: 100%;
}

